--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "adevinta-technical-test",
+  "name": "sui-components-datepicker",
   "version": "1.0.0",
-  "description": "Technical test for Frontend Engineer for DesignSystems",
+  "description": "SUI Components Datepicker",
+  "license": "ISC",
+  "author": "Juan Carlos Ruiz <klaufel@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/klaufel/sui-components-datepicker.git"
+  },
   "scripts": {
     "storybook": "start-storybook -p 9001",
     "storybook:build": "build-storybook -o storybook -c .storybook",
@@ -16,7 +22,6 @@
     "test:coverage": "jest --coverage",
     "test:coverage-web": "npm run test:coverage && open coverage/lcov-report/index.html"
   },
-  "author": "Juan Carlos Ruiz <klaufel@gmail.com>",
   "eslintConfig": {
     "extends": [
       "./node_modules/@s-ui/lint/eslintrc.js"
